sigle page created
single page for articles created

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
+payment/.idea/workspace.xml
