pagination added to list-view
pagination added to page
has custom style

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
