some html elements repeated
for better preview

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
