id name changed

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
