--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
+payment/.idea/workspace.xml
+payment/.idea/workspace.xml
