latest post section created
latest post section containing latest news and latest blogs, has been created.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
