comment slide added
comment slide created

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
