login page created
Plane html and css of login page

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
