--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
