register part and password strength checking
-register added to layout and selectable through top tabs
- strength of password will be checked by external plugin

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
