--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
 payment/.idea/workspace.xml
+payment/.idea/workspace.xml
