buttons functionality changed - minor other changes
button update and delete added
spinner added to buttons td
alert has close button
list has max-height

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ payment/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
+ehda-list/.idea/workspace.xml
