lottery page created
related files trasfered to this project
required manipulation done

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
+ehda-list/.idea/workspace.xml
