login page created
login page for operators created

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
+ehda-list/.idea/workspace.xml
