loading image function added (not used)
a function for loading image during ajax call added to js file but not used

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
 ehda-list/.idea/workspace.xml
+ehda-list/.idea/workspace.xml
